fix typo and change compile level to 1.8 instead jdk 9